# Mangos-Zero-scriptdev0-old

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile.am  README.md  README.mdown  ScriptMgr.cpp  ScriptMgr.h  config.h  config.h.in  scriptVC100.sln  scriptVC80.sln  scriptVC90.sln  scriptdevzero.conf.dist.in
VC100/: 100ScriptDev0.vcxproj  100ScriptDev0.vcxproj.filters  100ScriptDev2.vcxproj  100ScriptDev2.vcxproj.filters
VC80/: 80ScriptDev0.vcproj  80ScriptDev2.vcproj
VC90/: 90ScriptDev0.vcproj  90ScriptDev2.vcproj
base/: escort_ai.cpp  escort_ai.h  follower_ai.cpp  follower_ai.h  guard_ai.cpp  guard_ai.h  simple_ai.cpp  simple_ai.h
docs/: Text-tables.md  Text-tables.txt  ToDo.md  ToDo.txt  install.md  script-layout.md
include/: precompiled.cpp  precompiled.h  sc_creature.cpp  sc_creature.h  sc_gossip.h  sc_grid_searchers.cpp  sc_grid_searchers.h  sc_instance.cpp  sc_instance.h
patches/: MaNGOSZero-ScriptDevZero.patch  Mangos-zero-ScriptDev2.patch  Mangos-zero-ScriptDevZero.patch
scripts/battlegrounds/: battleground.cpp
scripts/custom/: custom.cpp  custom.h  custom_creatures.cpp  zero_creatures.cpp
scripts/eastern_kingdoms/: alterac_mountains.cpp  arathi_highlands.cpp  blasted_lands.cpp  burning_steppes.cpp  deeprun_tram.cpp  dun_morogh.cpp  eastern_plaguelands.cpp  elwynn_forest.cpp  hinterlands.cpp  ironforge.cpp  loch_modan.cpp  redridge_mountains.cpp  searing_gorge.cpp  silverpine_forest.cpp  stormwind_city.cpp  stranglethorn_vale.cpp  swamp_of_sorrows.cpp  tirisfal_glades.cpp  undercity.cpp  western_plaguelands.cpp  westfall.cpp  wetlands.cpp
scripts/eastern_kingdoms/blackrock_depths/: blackrock_depths.cpp  blackrock_depths.h  boss_ambassador_flamelash.cpp  boss_anubshiah.cpp  boss_emperor_dagran_thaurissan.cpp  boss_general_angerforge.cpp  boss_gorosh_the_dervish.cpp  boss_grizzle.cpp  boss_high_interrogator_gerstahn.cpp  boss_magmus.cpp  boss_theldren.cpp  boss_tomb_of_seven.cpp  instance_blackrock_depths.cpp
scripts/eastern_kingdoms/blackrock_spire/: blackrock_spire.h  boss_drakkisath.cpp  boss_goraluk_anvilcrack.cpp  boss_gyth.cpp  boss_halycon.cpp  boss_highlord_omokk.cpp  boss_jed_runewatcher.cpp  boss_mor_grayhoof.cpp  boss_mother_smolderweb.cpp  boss_overlord_wyrmthalak.cpp  boss_pyroguard_emberseer.cpp  boss_quartermaster_zigris.cpp  boss_rend_blackhand.cpp  boss_shadow_hunter_voshgajin.cpp  boss_solakar_flamewreath.cpp  boss_the_beast.cpp  boss_warmaster_voone.cpp  brs_mob_trash.cpp  instance_blackrock_spire.cpp
scripts/eastern_kingdoms/blackwing_lair/: blackwing_lair.h  boss_broodlord_lashlayer.cpp  boss_chromaggus.cpp  boss_ebonroc.cpp  boss_firemaw.cpp  boss_flamegor.cpp  boss_nefarian.cpp  boss_razorgore.cpp  boss_vaelastrasz.cpp  boss_victor_nefarius.cpp  instance_blackwing_lair.cpp
scripts/eastern_kingdoms/deadmines/: boss_mr_smite.cpp  deadmines.cpp  deadmines.h  instance_deadmines.cpp
scripts/eastern_kingdoms/gnomeregan/: boss_thermaplugg.cpp  gnomeregan.cpp  gnomeregan.h  instance_gnomeregan.cpp
scripts/eastern_kingdoms/molten_core/: boss_baron_geddon.cpp  boss_garr.cpp  boss_gehennas.cpp  (+10 more)
scripts/examples/: example_creature.cpp  example_escort.cpp  example_gossip_codebox.cpp  example_misc.cpp
scripts/kalimdor/: ashenvale.cpp  azshara.cpp  boss_azuregos.cpp  darkshore.cpp  desolace.cpp  durotar.cpp  dustwallow_marsh.cpp  felwood.cpp  feralas.cpp  moonglade.cpp  mulgore.cpp  orgrimmar.cpp  silithus.cpp  stonetalon_mountains.cpp  tanaris.cpp  teldrassil.cpp  the_barrens.cpp  thousand_needles.cpp  thunder_bluff.cpp  ungoro_crater.cpp  winterspring.cpp
scripts/world/: areatrigger_scripts.cpp  boss_emerald_dragons.cpp  boss_emeriss.cpp  boss_lethon.cpp  boss_lord_kazzak.cpp  boss_taerar.cpp  boss_ysondre.cpp  bosses_emerald_dragons.cpp  go_scripts.cpp  guards.cpp  item_scripts.cpp  mob_generic_creature.cpp  npc_professions.cpp  npcs_special.cpp  spell_scripts.cpp  world_map_scripts.cpp
scripts/zero_extra/: blackrock_spire.cpp  blackrock_spire.h  blackrock_spire_extra.cpp  blackrock_spire_extra.h  blackwing_lair.cpp  blackwing_lair_extra.cpp  zero_scripts.cpp  zero_scripts.h
sql/: Makefile.am  README  mangos_extra_scripts.sql  mangos_scriptname_full.sql  mangoszero_scriptname_full.sql  scriptdev0_create_database.sql  scriptdev0_create_structure_mysql.sql  scriptdev0_create_structure_pgsql.sql  scriptdev0_script_full.sql  scriptdev2_script_full.sql  scriptdevzero_create_database.sql  scriptdevzero_create_structure_mysql.sql  scriptdevzero_create_structure_pgsql.sql  scriptdevzero_script_full.sql
sql/ScriptDev-Zero/: Readme
sql/ScriptDev2/: Readme
sql/Updates/: Makefile.am  z0000_rxxxx_mangoszero.sql  z0000_rxxxx_scriptdevzero.sql  z0002_rxxxx_scriptdevzero.sql  z0003_rxxxx_scriptdevzero.sql  z0004_rxxxx_mangoszero.sql  z0007_rxxxx_mangoszero.sql  z0011_rxxxx_scriptdevzero.sql  z0014_rxxxx_scriptdevzero.sql  z0017_rxxxx_scriptdevzero.sql  z0051_rxxxx_scriptdevzero.sql  z0052_r1590_mangoszero.sql  z0053_r1591_mangoszero.sql  z0068_r1624_scriptdevzero.sql  z0077_r1647_mangoszero.sql  z0077_r1647_scriptdevzero.sql  z0078_1651_scriptdevzero.sql  z0085_rxxxx_mangoszero.sql  z0091_r1753_scriptdevzero.sql  z0098_r1818_scriptdevzero.sql  z0104_r1858_scriptdevzero.sql  z0108_r1667_mangoszero.sql  z0108_r1667_scriptdevzero.sql  z0110_r1668_mangoszero.sql  z0113_r1671_mangoszero.sql  z0113_r1671_scriptdevzero.sql  z0121_r1691_mangoszero.sql  z0124_r1698_mangoszero.sql  z0129_r1704_mangoszero.sql  z0135_r1715_mangoszero.sql  z0135_r1715_scriptdevzero.sql  z0140_rxxxx_mangoszero.sql  z0140_rxxxx_scriptdevzero.sql  z0157_rxxxx_scriptdevzero.sql  z0165_rxxxx_scriptdevzero.sql  z0166_rxxxx_scriptdevzero.sql  z0168_r1965_scriptdevzero.sql  z0169_rxxxx_scriptdevzero.sql  z0176_rxxxx_mangoszero.sql  z0176_rxxxx_scriptdevzero.sql  (+82 more)
sql/extra/: mangos_custom_scripts.sql  mangos_extra_scripts.sql  scriptdev_custom_scripts.sql  scriptdev_extra_scripts.sql
system/: MangosdRev.cpp  ScriptLoader.cpp  ScriptLoader.h  revision_nr.h  revision_sql.h  system.cpp  system.h
tool/git_id/: CMakeLists.txt  git_id.cpp  git_id_vc100.vcxproj.filters
(+144 files in other folders)
