# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = scriptdevzero/sql/updates
pkgdatadir = $(datadir)/scriptdevzero/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	z0000_rxxxx_scriptdevzero.sql \
	z0000_rxxxx_mangoszero.sql \
        z0002_rxxxx_scriptdevzero.sql \
	z0003_rxxxx_scriptdevzero.sql \
	z0004_rxxxx_mangoszero.sql \
	z0007_rxxxx_mangoszero.sql \
	z0011_rxxxx_scriptdevzero.sql \
	z0014_rxxxx_scriptdevzero.sql \
	z0017_rxxxx_scriptdevzero.sql \
	z0027_r1519_mangoszero.sql \
	z0030_r1525_scriptdevzero.sql \
	z0041_r1577_mangoszero.sql \
	z0041_r1577_scriptdevzero.sql \
	z0051_rxxxx_scriptdevzero.sql \
	z0052_r1590_mangoszero.sql \
	z0053_r1591_mangoszero.sql \
	z0054_r1594_mangoszero.sql \
	z0064_r1621_scriptdevzero.sql
	z0066_r1622_mangoszero.sql \
	z0066_r1622_scriptdevzero.sql
	z0068_r1624_mangoszero.sql \
	z0068_r1624_scriptdevzero.sql
	z0069_r1627_mangoszero.sql \
	z0069_r1627_scriptdevzero.sql
	z0070_r1629_mangoszero.sql \
	z0070_r1629_scriptdevzero.sql \
	z0073_r1636_mangoszero.sql \
	Z0074_r1637_scriptdevzero.sql
	Z0077_r1647_scriptdevzero.sql \
	Z0077_r1647_mangoszero.sql
