# Copyright (C) 2005-2010 MaNGOS <http://getmangos.com/>
# Copyright (C) 2009-2010 MaNGOSZero <http://github.com/mangoszero/mangoszero/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = scriptdevzero/sql/Updates
pkgdatadir = $(datadir)/scriptdevzero/sql/Updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	z0000_rxxxx_mangoszero.sql \
	z0000_rxxxx_scriptdevzero.sql \
	z0002_rxxxx_scriptdevzero.sql \
	z0003_rxxxx_scriptdevzero.sql \
	z0004_rxxxx_mangoszero.sql \
	z0007_rxxxx_mangoszero.sql \
	z0011_rxxxx_scriptdevzero.sql \
	z0014_rxxxx_scriptdevzero.sql \
	z0017_rxxxx_scriptdevzero.sql \
	z0030_r1525_scriptdevzero.sql \
	z0039_r1567_scriptdevzero.sql \
	z0041_r1577_mangoszero.sql \
	z0041_r1577_scriptdevzero.sql \
	z0051_rxxxx_scriptdevzero.sql \
	z0052_r1590_mangoszero.sql \
	z0053_r1591_mangoszero.sql \
	z0054_r1594_mangoszero.sql \
	z0064_r1621_scriptdevzero.sql \
	z0066_r1622_mangoszero.sql \
	z0066_r1622_scriptdevzero.sql \
	z0068_r1624_mangoszero.sql \
	z0068_r1624_scriptdevzero.sql \
	z0069_r1627_mangoszero.sql \
	z0069_r1627_scriptdevzero.sql \
	z0070_r1629_mangoszero.sql \
	z0070_r1629_scriptdevzero.sql \
	z0073_r1636_mangoszero.sql \
	z0074_r1637_scriptdevzero.sql \
	z0077_r1647_mangoszero.sql \
	z0077_r1647_scriptdevzero.sql \
	z0078_1651_scriptdevzero.sql \
	z0085_rxxxx_mangoszero.sql \
	z0091_r1753_scriptdevzero.sql \
	z0098_r1818_mangoszero.sql \
	z0098_r1818_scriptdevzero.sql \
	z0104_r1858_scriptdevzero.sql \
	z0108_r1667_mangoszero.sql \
	z0108_r1667_scriptdevzero.sql \
	z0110_r1668_mangoszero.sql \
	z0113_r1671_mangoszero.sql \
	z0113_r1671_scriptdevzero.sql \
	z0116_r1785_scriptdevzero.sql \
	z0116_r1869_mangoszero.sql \
	z0121_r1691_mangoszero.sql \
	z0124_r1698_mangoszero.sql \
	z0129_r1704_mangoszero.sql \
	z0135_r1715_mangos.sql \
	z0135_r1715_scriptdev2.sql

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	z0000_rxxxx_mangoszero.sql \
	z0000_rxxxx_scriptdevzero.sql \
	z0002_rxxxx_scriptdevzero.sql \
	z0003_rxxxx_scriptdevzero.sql \
	z0004_rxxxx_mangoszero.sql \
	z0007_rxxxx_mangoszero.sql \
	z0011_rxxxx_scriptdevzero.sql \
	z0014_rxxxx_scriptdevzero.sql \
	z0017_rxxxx_scriptdevzero.sql \
	z0030_r1525_scriptdevzero.sql \
	z0039_r1567_scriptdevzero.sql \
	z0041_r1577_mangoszero.sql \
	z0041_r1577_scriptdevzero.sql \
	z0051_rxxxx_scriptdevzero.sql \
	z0052_r1590_mangoszero.sql \
	z0053_r1591_mangoszero.sql \
	z0054_r1594_mangoszero.sql \
	z0064_r1621_scriptdevzero.sql \
	z0066_r1622_mangoszero.sql \
	z0066_r1622_scriptdevzero.sql \
	z0068_r1624_mangoszero.sql \
	z0068_r1624_scriptdevzero.sql \
	z0069_r1627_mangoszero.sql \
	z0069_r1627_scriptdevzero.sql \
	z0070_r1629_mangoszero.sql \
	z0070_r1629_scriptdevzero.sql \
	z0073_r1636_mangoszero.sql \
	z0074_r1637_scriptdevzero.sql \
	z0077_r1647_mangoszero.sql \
	z0077_r1647_scriptdevzero.sql \
	z0078_1651_scriptdevzero.sql \
	z0085_rxxxx_mangoszero.sql \
	z0091_r1753_scriptdevzero.sql \
	z0098_r1818_mangoszero.sql \
	z0098_r1818_scriptdevzero.sql \
	z0104_r1858_scriptdevzero.sql \
	z0108_r1667_mangoszero.sql \
	z0108_r1667_scriptdevzero.sql \
	z0110_r1668_mangoszero.sql \
	z0113_r1671_mangoszero.sql \
	z0113_r1671_scriptdevzero.sql \
	z0116_r1785_scriptdevzero.sql \
	z0116_r1869_mangoszero.sql \
	z0121_r1691_mangoszero.sql \
	z0124_r1698_mangoszero.sql \
	z0129_r1704_mangoszero.sql \
	z0135_r1715_mangos.sql \
	z0135_r1715_scriptdev2.sql
